Sorting files/Index pages

--- a/src/public/partials/details.html
+++ b/src/public/partials/details.html
@@ -1,3 +1,4 @@
+<!--Import details from details.json-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,9 +9,10 @@
     <link rel="stylesheet" href="/css/style.css" />
     <script src="js/main.js" type="module"></script>
   </head>
-<footer>
-  <ul>
-    <li>Back to Calendar</li>
 
-  </ul>
-</footer>
+<h2>Activity Details</h2>
+
+<!--To be imported from the main index.html-->
+<!--This is a view only for the user-->
+
+<p>Lorem Ipsum</p>
