--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,15 +1,15 @@
-/* This is sample code from previous project */
+/* This is sample code from previous project 
 :root {
   --font-body: "Segoe UI", Helvetica, sans-serif;
   --font-headline: Haettenschweiler, "Akko Rounded Std Medium", sans-serif;
-  /* colors */
+  /* colors 
   --primary-color: #f0a868;
   --secondary-color: #525b0f;
   --tertiary-color: #a4b8c4;
   --light-grey: #d0d0d0;
   --dark-grey: #303030;
 
-  /* sizes */
+  /* sizes 
   --font-base: 18px;
   --small-font: 0.8em;
   --large-font: 1.2em;
@@ -22,5 +22,20 @@ body {
   color: var(--dark-grey);
 }
 
-/* end sample code *
- /
+end sample code */
+
+
+/* This the calendar index page grid */
+.grid-container {
+  font-display: grid;
+  grid-template-columns: auto auto auto;
+  background-color: #2196F3;
+  padding: 10px;
+}
+.grid-item {
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+}
