--- a/src/public/partials/header.html
+++ b/src/public/partials/header.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title></title>
+    <link rel="stylesheet" href="/css/style.css" />
+    <script src="js/main.js" type="module"></script>
+  </head>
 <header>
   <div class="logo">
     <img src="" alt="Header Image">
