updateNewActivity & work on js

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -27,7 +27,7 @@ end sample code */
 
 /* This the calendar index page grid */
 .grid-container {
-  font-display: grid;
+  display: grid;
   grid-template-columns: auto auto auto;
   background-color: #2196F3;
   padding: 10px;
