--- a/src/public/partials/footer.html
+++ b/src/public/partials/footer.html
@@ -9,8 +9,12 @@
     <script src="js/main.js" type="module"></script>
   </head>
 <footer>
-  <ul>
-    <li>Back to Calendar</li>
+    <nav>
+      <ul>
+        <li <a href="Enter"></a>New Activity</a></li>
+        <li <a href="calendar"></a>Calendar</a></li>
+      </ul>
+    </nav>
 
-  </ul>
+  
 </footer>
