more file setup & login setup

--- a/src/public/partials/details.html
+++ b/src/public/partials/details.html
@@ -13,6 +13,6 @@
 <h2>Activity Details</h2>
 
 <!--To be imported from the main index.html-->
-<!--This is a view only for the user-->
+<!--This is a view for the user and will be a edit for the account manager/s-->
 
 <p>Lorem Ipsum</p>
