--- a/src/public/partials/footer.html
+++ b/src/public/partials/footer.html
@@ -11,10 +11,9 @@
 <footer>
     <nav>
       <ul>
-        <li <a href="Enter"></a>New Activity</a></li>
-        <li <a href="calendar"></a>Calendar</a></li>
+        <li><a href="Enter"></a>New Activity</a></li>
+        <li><a href="calendar"></a>Calendar</a></li>
       </ul>
     </nav>
-
   
 </footer>
