trying to find file issue

--- a/src/public/partials/details.html
+++ b/src/public/partials/details.html
@@ -1,7 +1,6 @@
 <!--Import details from details.json-->
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,6 +9,7 @@
     <script src="js/main.js" type="module"></script>
   </head>
 
-<h2>Activity Details</h2>
+  <h2>Activity Details</h2>
 
-<p>Lorem Ipsum</p>
+  <p>Lorem Ipsum</p>
+</html>
