--- a/src/public/partials/header.html
+++ b/src/public/partials/header.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,10 +7,11 @@
     <link rel="stylesheet" href="/css/style.css" />
     <script src="js/main.js" type="module"></script>
   </head>
-<header>
-  <div class="logo">
-    <img src="" alt="Header Image">
-  </div>
-</header>
+  <header>
+    <div class="logo">
+      <img src="" alt="Header Image" />
+    </div>
+  </header>
 
-<!--add login image here. Then use JS to swap out image for each page-->
+  <!--add login image here. Then use JS to swap out image for each page-->
+</html>
