--- a/src/public/partials/footer.html
+++ b/src/public/partials/footer.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,12 +7,12 @@
     <link rel="stylesheet" href="/css/style.css" />
     <script src="js/main.js" type="module"></script>
   </head>
-<footer>
-    <nav>
-      <ul>
-        <li><a href="Enter"></a>New Activity</a></li>
-        <li><a href="calendar"></a>Calendar</a></li>
-      </ul>
-    </nav>
-  
-</footer>
+  <body>
+    <footer>
+        <ul>
+          <li><a href="Enter"></a>New Activity</a></li>
+          <li><a href="calendar"></a>Calendar</a></li>
+        </ul>
+    </footer>
+  </body>
+</html>
