--- a/src/public/partials/footer.html
+++ b/src/public/partials/footer.html
@@ -8,8 +8,8 @@
     <script src="js/main.js" type="module"></script>
   </head>
   <body>
-    <footer>
-        <ul>
+    <footer id="footer">
+        <ul class="managerButton">
           <li><a href="Enter"></a>New Activity</a></li>
           <li><a href="calendar"></a>Calendar</a></li>
         </ul>
