--- a/src/public/partials/header.html
+++ b/src/public/partials/header.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="/css/style.css" />
     <script src="js/main.js" type="module"></script>
   </head>
-  <header>
+ <!-- <header>
     <div class="logo">
       <img src="" alt="Header Image" />
     </div>
-  </header>
+  </header> -->
 
   <!--add login image here. Then use JS to swap out image for each page-->
 </html>
