--- a/src/css/style.css
+++ b/src/css/style.css
@@ -101,8 +101,46 @@ h1, h2, h3 {
   font-size: 20px;
   text-align: center;
  } 
-
-/* **********Details-modal-index View******* */
+/* **********Calendar View************ */
+/*.calendar {
+  display: grid;
+  grid-template-columns: repeat(7, 1r);
+  gap: 1px;
+}
+.header {
+  display: contents;
+}
+.header div {
+  font-weight: bold;
+  text-align: center;
+  padding: 10px;
+  background-color: #ddd;
+} */
+ .header {
+  display: flex;
+  justify-content: space-between;
+ }
+ .header div {
+  flex: 1;
+  text-align: center;
+  padding: 10px;
+  background-color: #ddd;
+  font-weight: bold;
+ }
+.date {
+  border: 1px solid #ddd;
+  padding: 10px;
+  text-align: center;
+  min-height: 50px;
+  position: relative;
+}
+.activity {
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  margin-top: 5px;
+  padding: 5px;
+}
+/* **********Details-modal View******* */
 .modal {
   display: none;
   position: fixed;
